erDiagram
    NARRATOR {
        string id PK
        string name_ar
        string name_en
        string kunya
        string nisba
        string laqab
        int birth_year_ah
        int death_year_ah
        string birth_location
        string death_location
        string generation
        string gender
        string sect_affiliation
        string tabaqat_class
        string trustworthiness_consensus
        float betweenness_centrality
        float pagerank
        int community_id
    }
    HADITH {
        string id PK
        string matn_ar
        string matn_en
        string isnad_raw_ar
        string isnad_raw_en
        string grade_composite
        string topic_tags
        string source_corpus
        bool has_shia_parallel
        bool has_sunni_parallel
    }
    COLLECTION {
        string id PK
        string name_ar
        string name_en
        string compiler_name
        int compilation_year_ah
        string sect
        int canonical_rank
        int book_count
    }
    GRADING {
        string id PK
        string scholar_name
        string grade
        string methodology
        string era
    }
    CHAIN {
        string id PK
        string hadith_id FK
        int chain_index
        string full_chain_text
        int chain_length
        bool is_complete
    }
    CHAIN_LINK {
        string id PK
        string chain_id FK
        string from_narrator FK
        string to_narrator FK
        int position
        string transmission_method
    }
    HISTORICAL_EVENT {
        string id PK
        string name
        string name_ar
        int year_ah
        int end_year_ah
        string event_type
        string caliphate
        string region
    }
    LOCATION {
        string id PK
        string name
        string region
        float lat
        float lon
    }

    NARRATOR ||--o{ CHAIN_LINK : "TRANSMITTED_TO"
    CHAIN_LINK }o--|| CHAIN : "belongs_to"
    CHAIN }o--|| HADITH : "authenticates"
    HADITH }o--o{ COLLECTION : "APPEARS_IN"
    HADITH ||--o{ GRADING : "graded_by"
    NARRATOR }o--o{ NARRATOR : "STUDIED_UNDER"
    NARRATOR ||--o{ HADITH : "NARRATED"
    NARRATOR }o--o{ LOCATION : "BASED_IN"
    NARRATOR }o--o{ HISTORICAL_EVENT : "ACTIVE_DURING"
    HADITH }o--o{ HADITH : "PARALLEL_OF"
